--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gatsby": "^2.15.28",
     "gatsby-image": "^2.2.23",
     "gatsby-plugin-manifest": "^2.2.20",
+    "gatsby-plugin-netlify": "^2.1.23",
     "gatsby-plugin-offline": "^3.0.11",
     "gatsby-plugin-react-helmet": "^3.1.10",
     "gatsby-plugin-sass": "^2.1.20",
