--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mchacks7",
   "private": true,
   "description": "McHacks website",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "author": "HackMcGill @hackmcgill",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
@@ -13,6 +13,7 @@
     "gatsby": "^2.15.28",
     "gatsby-image": "^2.2.23",
     "gatsby-plugin-manifest": "^2.2.20",
+    "gatsby-plugin-netlify": "^2.1.23",
     "gatsby-plugin-offline": "^3.0.11",
     "gatsby-plugin-react-helmet": "^3.1.10",
     "gatsby-plugin-sass": "^2.1.20",
@@ -23,8 +24,8 @@
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.10.1",
+    "react-burger-menu": "^2.6.11",
     "react-dom": "^16.10.1",
-    "react-hamburger-menu": "^1.1.1",
     "react-helmet": "^5.2.1",
     "styled-components": "^4.4.0"
   },
@@ -39,15 +40,15 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
-    "start": "npm run develop",
+    "start": "gatsby develop",
     "serve": "gatsby serve",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing \""
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    "url": "https://github.com/hackmcgill/mchacks7"
   },
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/hackmcgill/mchacks7/issues"
   }
 }
