add google analytics plugin

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "styled-components": "^4.4.0"
   },
   "devDependencies": {
+    "gatsby-plugin-google-analytics": "^2.1.31",
     "prettier": "^1.18.2"
   },
   "keywords": [
