--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mchacks7",
   "private": true,
   "description": "McHacks website",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "author": "HackMcGill @hackmcgill",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
@@ -10,7 +10,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.7",
     "babel-plugin-styled-components": "^1.10.6",
-    "gatsby": "^2.15.28",
+    "gatsby": "^2.18.16",
     "gatsby-image": "^2.2.23",
     "gatsby-plugin-manifest": "^2.2.20",
     "gatsby-plugin-netlify": "^2.1.23",
@@ -30,6 +30,7 @@
     "styled-components": "^4.4.0"
   },
   "devDependencies": {
+    "gatsby-plugin-google-analytics": "^2.1.31",
     "prettier": "^1.18.2"
   },
   "keywords": [
