--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-burger-menu": "^2.6.11",
     "react-dom": "^16.10.1",
     "react-helmet": "^5.2.1",
+    "react-stickynode": "^2.1.1",
     "styled-components": "^4.4.0"
   },
   "devDependencies": {
