--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "babel-plugin-styled-components": "^1.10.6",
     "gatsby": "^2.18.16",
     "gatsby-image": "^2.2.23",
+    "gatsby-plugin-client-side-redirect": "^1.1.0",
     "gatsby-plugin-manifest": "^2.2.20",
-    "gatsby-plugin-netlify": "^2.1.23",
     "gatsby-plugin-offline": "^3.0.11",
     "gatsby-plugin-react-helmet": "^3.1.10",
     "gatsby-plugin-sass": "^2.1.20",
