--- a/package.json
+++ b/package.json
@@ -2,8 +2,16 @@
   "name": "mchacks7",
   "private": true,
   "description": "McHacks website",
-  "version": "1.10.0",
+  "version": "1.12.0",
   "author": "HackMcGill @hackmcgill",
+  "scripts": {
+    "build": "gatsby build",
+    "develop": "gatsby develop",
+    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "start": "gatsby develop",
+    "serve": "gatsby serve",
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing \""
+  },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
@@ -12,8 +20,8 @@
     "babel-plugin-styled-components": "^1.10.6",
     "gatsby": "^2.18.16",
     "gatsby-image": "^2.2.23",
+    "gatsby-plugin-client-side-redirect": "^1.1.0",
     "gatsby-plugin-manifest": "^2.2.20",
-    "gatsby-plugin-netlify": "^2.1.23",
     "gatsby-plugin-offline": "^3.0.11",
     "gatsby-plugin-react-helmet": "^3.1.10",
     "gatsby-plugin-sass": "^2.1.20",
@@ -38,14 +46,6 @@
     "gatsby"
   ],
   "license": "MIT",
-  "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
-    "start": "gatsby develop",
-    "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing \""
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/hackmcgill/mchacks7"
